Bug 20268: CSS regression: white gap on the top of the staff pages
This patch makes template and CSS changes so that the staff client main
page doesn't get an unwanted top margin from the Bootstrap-grid
conversion.

- The unused "main" class is removed from the login page
- The "main" class on the staff client home page is changed to
  "intranet-main."
- The CSS for the staff client home page has been modified accordingly.

To test, apply the patch and clear your browser cache if necessary.

- Open the staff client login page. It should look as it always does.
- Log in and check the style of the main page. There should be no white
  margin at the top of the page.

--- a/koha-tmpl/intranet-tmpl/prog/css/mainpage.css
+++ b/koha-tmpl/intranet-tmpl/prog/css/mainpage.css
@@ -180,7 +180,7 @@ ul.biglinks-list li a:hover.icon_course_reserves {background-position:5px -1146p
 }
 /* ==== USERBLOCK - End ==== */
 
-.main .row {
+.intranet-main .row {
     margin-left: 0;
     margin-right: 0;
 }
